--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Lista Produtos
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,12 +9,24 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">Lista Produtos</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <ion-button expand="block" routerLink="/formulario-produto">Novo Produto</ion-button>
+
+    <ion-list>
+      <ion-item-sliding *ngFor="let item of produtos">
+        <ion-item>
+          <ion-label>{{ item.descricao }} | R$ {{ item.valor }}</ion-label>
+        </ion-item>
+        <ion-item-options side="end">
+          <ion-item-option color="primary" (click)="visualizarProduto(item)">Ver</ion-item-option>
+          <ion-item-option color="warning" (click)="editarProduto(item.id)">Edit</ion-item-option>
+          <ion-item-option color="danger" (click)="unread(item)">Delete</ion-item-option>
+        </ion-item-options>
+      </ion-item-sliding>
+    </ion-list>
   </div>
 </ion-content>
