--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,25 +1,23 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Lista Produtos
-    </ion-title>
+    <ion-title>Lista de Produtos</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Lista Produtos</ion-title>
+      <ion-title size="large">Lista de Produtos</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
+  <div>
     <ion-button expand="block" routerLink="/formulario-produto">Novo Produto</ion-button>
 
     <ion-list>
       <ion-item-sliding *ngFor="let item of produtos">
         <ion-item>
-          <ion-label>{{ item.descricao }} | R$ {{ item.valor }}</ion-label>
+          <ion-label>{{ item.descricao }} | {{item.marca}} | R$ {{ item.valor }}</ion-label>
         </ion-item>
         <ion-item-options side="end">
           <ion-item-option color="primary" (click)="visualizarProduto(item)">Ver</ion-item-option>
