Lista e Cadastro de Categorias *Obs.: Trocar component para page em Produto

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,5 +13,6 @@
 
   <div id="container">
     <ion-button color="danger" expand="block" routerLink="/produtos">Produtos</ion-button>
+    <ion-button color="success" expand="block" routerLink="/lista-categoria">Categorias</ion-button>
   </div>
 </ion-content>
