--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -12,7 +12,7 @@
   </ion-header>
 
   <div id="container">
-    <ion-button color="danger" expand="block" routerLink="/produtos">Produtos</ion-button>
+    <ion-button color="danger" expand="block" routerLink="/lista-produto">Produtos</ion-button>
     <ion-button color="success" expand="block" routerLink="/lista-categoria">Categorias</ion-button>
   </div>
 </ion-content>
