--- a/src/app/pages/categoria/formulario-categoria/formulario-categoria.page.html
+++ b/src/app/pages/categoria/formulario-categoria/formulario-categoria.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
     <ion-title>Cadastro de Categoria</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -7,6 +10,9 @@
 <ion-content>
   <ion-header collapse="condense">
     <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-back-button></ion-back-button>
+      </ion-buttons>
       <ion-title size="large">Cadastro de Categoria</ion-title>
     </ion-toolbar>
   </ion-header>
