--- a/src/app/pages/categoria/lista-categoria/lista-categoria.page.html
+++ b/src/app/pages/categoria/lista-categoria/lista-categoria.page.html
@@ -1,5 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
     <ion-title>Lista de Categorias</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -7,6 +10,9 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-back-button></ion-back-button>
+      </ion-buttons>
       <ion-title size="large">Lista de Categorias</ion-title>
     </ion-toolbar>
   </ion-header>
@@ -22,7 +28,7 @@
         <ion-item-options side="end">
           <ion-item-option color="primary" (click)="visualizarCategoria(item)">Ver</ion-item-option>
           <ion-item-option color="warning" (click)="editarCategoria(item.id)">Edit</ion-item-option>
-          <ion-item-option color="danger" (click)="unread(item)">Delete</ion-item-option>
+          <ion-item-option color="danger" (click)="deletarCategoria(item.id)">Delete</ion-item-option>
         </ion-item-options>
       </ion-item-sliding>
     </ion-list>
