--- a/src/app/pages/produto/lista-produto/lista-produto.page.html
+++ b/src/app/pages/produto/lista-produto/lista-produto.page.html
@@ -1,5 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
     <ion-title>Lista de Produtos</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -7,12 +10,15 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-back-button></ion-back-button>
+      </ion-buttons>
       <ion-title size="large">Lista de Produtos</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <div>
-    <ion-button expand="block" routerLink="/produtos/formulario-produto">Novo Produto</ion-button>
+    <ion-button expand="block" routerLink="/formulario-produto">Novo Produto</ion-button>
 
     <ion-list>
       <ion-item-sliding *ngFor="let item of produtos">
@@ -22,7 +28,7 @@
         <ion-item-options side="end">
           <ion-item-option color="primary" (click)="visualizarProduto(item)">Ver</ion-item-option>
           <ion-item-option color="warning" (click)="editarProduto(item.id)">Edit</ion-item-option>
-          <ion-item-option color="danger" (click)="unread(item)">Delete</ion-item-option>
+          <ion-item-option color="danger" (click)="deletarProduto(item.id)">Delete</ion-item-option>
         </ion-item-options>
       </ion-item-sliding>
     </ion-list>
