Criação de Páginas - Login - Perfil - Cadastro

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -12,7 +12,10 @@
   </ion-header>
 
   <div id="container">
-    <ion-button color="danger" expand="block" routerLink="/lista-produto">Produtos</ion-button>
-    <ion-button color="success" expand="block" routerLink="/lista-categoria">Categorias</ion-button>
+    <ion-button color="warning" expand="block" routerLink="/login">Login</ion-button>
+    <ion-button color="success" expand="block" routerLink="/formulario-perfil">Cadastrar</ion-button>
+    <ion-button color="danger" expand="block" routerLink="/visualizar-perfil">Ver Perfil</ion-button>
+    <ion-button color="primary" expand="block" routerLink="/lista-produto">Produtos</ion-button>
+    <ion-button color="secondary" expand="block" routerLink="/lista-categoria">Categorias</ion-button>
   </div>
 </ion-content>
