--- a/src/app/pages/produto/lista-produto/lista-produto.page.html
+++ b/src/app/pages/produto/lista-produto/lista-produto.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
+      <ion-back-button defaultHref="home"></ion-back-button>
     </ion-buttons>
     <ion-title>Lista de Produtos</ion-title>
   </ion-toolbar>
@@ -11,7 +11,7 @@
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-buttons slot="start">
-        <ion-back-button></ion-back-button>
+        <ion-back-button defaultHref="home"></ion-back-button>
       </ion-buttons>
       <ion-title size="large">Lista de Produtos</ion-title>
     </ion-toolbar>
