--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -12,6 +12,7 @@
   </ion-header>
 
   <div id="container">
+    <ion-button color="dark" expand="block" routerLink="/lista-exemplos">Lista de Exemplos de Componentes</ion-button>
     <ion-button color="warning" expand="block" routerLink="/login">Login</ion-button>
     <ion-button color="success" expand="block" routerLink="/formulario-perfil">Cadastrar</ion-button>
     <ion-button color="danger" expand="block" routerLink="/visualizar-perfil">Ver Perfil</ion-button>
