--- a/src/app/pages/exemplos-componentes/lista-exemplos/lista-exemplos.page.html
+++ b/src/app/pages/exemplos-componentes/lista-exemplos/lista-exemplos.page.html
@@ -18,9 +18,11 @@
   </ion-header>
 
   <div>
-    <ion-button color="medium" expand="block" routerLink="/action-sheet">Action Sheet</ion-button>
-    <ion-button color="light" expand="block" routerLink="/alert">Alert</ion-button>
-    <ion-button color="medium" expand="block" routerLink="/badge">Badge</ion-button>
-    <ion-button color="light" expand="block" routerLink="/button">Button</ion-button>
+    <ion-button color="dark" expand="block" routerLink="/action-sheet">Action Sheet</ion-button>
+    <ion-button color="medium" expand="block" routerLink="/alert">Alert</ion-button>
+    <ion-button color="dark" expand="block" routerLink="/badge">Badge</ion-button>
+    <ion-button color="medium" expand="block" routerLink="/button">Button</ion-button>
+    <ion-button color="dark" expand="block" routerLink="/card">Card</ion-button>
+    <ion-button color="medium" expand="block" routerLink="/button">Button</ion-button>
   </div>
 </ion-content>
