Continuação dos Componentes - Checkbox - Chip - Content (em construção) - Picker Data-Hora - Botões Flutuantes

--- a/src/app/pages/exemplos-componentes/lista-exemplos/lista-exemplos.page.html
+++ b/src/app/pages/exemplos-componentes/lista-exemplos/lista-exemplos.page.html
@@ -23,6 +23,10 @@
     <ion-button color="dark" expand="block" routerLink="/badge">Badge</ion-button>
     <ion-button color="medium" expand="block" routerLink="/button">Button</ion-button>
     <ion-button color="dark" expand="block" routerLink="/card">Card</ion-button>
-    <ion-button color="medium" expand="block" routerLink="/button">Button</ion-button>
+    <ion-button color="medium" expand="block" routerLink="/checkbox">Checkbox</ion-button>
+    <ion-button color="dark" expand="block" routerLink="/chip">Chip</ion-button>
+    <ion-button color="danger" expand="block" routerLink="/checkbox">! Content !</ion-button>
+    <ion-button color="dark" expand="block" routerLink="/date-time-pickers">Picker de Data e Hora</ion-button>
+    <ion-button color="medium" expand="block" routerLink="/floating-action-button">Botões Flutuantes</ion-button>
   </div>
 </ion-content>
