--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,6 +13,7 @@
 
   <div id="container">
     <ion-button color="tertiary" expand="block" routerLink="/revisao">Revisão</ion-button>
+    <ion-button color="light" expand="block" routerLink="/revisao2">Revisão 2</ion-button>
     <ion-button color="dark" expand="block" routerLink="/lista-exemplos">Lista de Exemplos de Componentes</ion-button>
     <ion-button color="warning" expand="block" routerLink="/login">Login</ion-button>
     <ion-button color="success" expand="block" routerLink="/formulario-perfil">Cadastrar</ion-button>
