--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -12,6 +12,7 @@
   </ion-header>
 
   <div id="container">
+    <ion-button color="medium" expand="block" routerLink="/contact-list">Exemplo Storage</ion-button>
     <ion-button color="tertiary" expand="block" routerLink="/revisao">Revisão</ion-button>
     <ion-button color="light" expand="block" routerLink="/revisao2">Revisão 2</ion-button>
     <ion-button color="dark" expand="block" routerLink="/lista-exemplos">Lista de Exemplos de Componentes</ion-button>
